--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^2.1.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^8.0.1",
+    "@nestjs/common": "^9.0.8",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.0.8",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^8.2.2",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/serve-static": "^2.2.2",
-    "@nestjs/typeorm": "^8.1.4",
+    "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.8",
+    "@nestjs/platform-socket.io": "^9.0.8",
+    "@nestjs/serve-static": "^3.0.0",
+    "@nestjs/typeorm": "^9.0.0",
+    "@nestjs/websockets": "^9.0.8",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -42,12 +44,12 @@
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.4.7",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.1",
+    "@nestjs/testing": "^9.0.8",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.4.1",
+    "@types/jest": "27.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
